# macroless

./: README.md  macroless.cpp  macroless.h
example/: CMakeLists.txt  std_map_test.cpp  std_vector_test.cpp
